# Boza

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
example/: example_pch.cpp  example_pch.hpp  main.cpp  pch.hpp
shaders/: compile.bat  default.frag  default.vert  test.frag
shaders/src/: default.frag  default.vert
src/: FixedSystem.hpp  Logger.cpp  Logger.hpp  Logger.inl  Serialize.hpp  Singleton.hpp  System.hpp  SystemBase.hpp  VariableSystem.hpp  boza_pch.cpp  boza_pch.hpp  macros.hpp  pch.hpp
src/Core/: API.hpp  App.cpp  App.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  GameObject.inl  Scene.cpp  Scene.hpp  Window.cpp  Window.hpp
src/Core/Components/: Behaviour.hpp  Component.hpp  GameObjData.cpp  GameObjData.hpp  Transform.hpp
src/Core/EventSystem/: EventSystem.cpp  EventSystem.hpp  EventSystem.inl
src/Core/InputSystem/: InputSystem.cpp  InputSystem.hpp
src/Core/JobSystem/: Job.hpp  JobSystem.cpp  JobSystem.hpp  JobSystem.inl  Worker.cpp  Worker.hpp
src/Core/PhysicsSystem/: PhysicsSystem.cpp  PhysicsSystem.hpp
src/Core/RenderingSystem/: RenderingSystem.cpp  RenderingSystem.hpp
src/Core/RenderingSystem/Vulkan/: CommandPool.cpp  CommandPool.hpp  Device.cpp  Device.hpp  Instance.cpp  Instance.hpp  Mesh.cpp  Mesh.hpp  Mesh.inl  MeshManager.hpp  Pipeline.cpp  Pipeline.hpp  PipelineManager.cpp  PipelineManager.hpp  PipelineManager.inl  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  ShaderLoader.cpp  ShaderLoader.hpp  Swapchain.cpp  Swapchain.hpp
src/Core/RenderingSystem/Vulkan/Memory/: Allocator.cpp  Allocator.hpp  Buffer.cpp  Buffer.hpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSet.cpp  DescriptorSet.hpp  DescriptorSet.inl  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  Texture.cpp  Texture.hpp
src/GPU/Vulkan/Core/: Device.cpp  Instance.cpp  Swapchain.cpp
src/GPU/Vulkan/Descriptor/: DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSet.cpp  DescriptorSet.hpp  DescriptorSet.inl
src/GPU/Vulkan/Memory/: Allocator.cpp  Buffer.hpp  Texture.cpp
src/GPU/Vulkan/Pipeline/: Pipeline.cpp  Pipeline.hpp  PipelineManager.cpp  PipelineManager.hpp  PipelineManager.inl  ShaderLoader.cpp  ShaderLoader.hpp
src/GPU/Vulkan/Vertex/: VertexLayout.hpp
src/Render/: Mesh.cpp  Mesh.hpp  Mesh.inl  MeshManager.cpp  MeshManager.hpp  MeshManager.inl  Renderer.cpp  Renderer.hpp
